Edited Mail templates

--- a/mail/message.html
+++ b/mail/message.html
@@ -9,14 +9,14 @@
 	</style>
 	<body>
 		<h2>
-			Sie haben eine Neue Antwort auf ihr Ticket
+			Neue Antwort
 		</h2>
 		<hr>
 		<h5>
-			"Name" hat soeben eine Antword zum Ticket "Ticket" verfasst.
+			Jemand hat soeben eine Antword zum Ticket #%id% (%device%/%category%) verfasst.
 		</h5>
 		<h5>
-			Sie können das Ticket jederzeit unter folgendem Link einsehen: https://itcrowd.wiki/wp-admin/admin.php?page=tickets $ticket-"ID".
+			Sie können das Ticket jederzeit unter folgendem Link einsehen: <a href="https://itcrowd.wiki/wp-admin/admin.php?page=ticket&id=%id%">https://itcrowd.wiki/wp-admin/admin.php?page=ticket&id=%id%</a>.
 		</h5>
 	</body>
 </html>
